<resources>
    <string name="app_name">ProjectPatient</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="update">Update</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="doctor">Doctor</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="forgot">Forgot Password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_degree">Enter degree</string>
    <string name="morning_opd">Morning OPD</string>
    <string name="evening_opd">Evening OPD</string>
    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>
    <string name="title_activity_main">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_vitals">Select vitals</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="cholestrol">Cholestrol</string>
    <string name="stress">Stress</string>
    <string name="ecg">ECG</string>
    <string name="hemogram">Hemogram</string>
    <string name="read">Read</string>
    <string name="sugar_random">Sugar Random</string>
    <string name="bmi">BMI</string>
    <string name="patients">Patients</string>
    <string name="report">Final Report</string>
    <string name="search_here">Search here</string>
    <string name="lhemogram">Hemogram</string>
    <string name="lbmi">BMI</string>
    <string name="lecg">ECG</string>
    <string name="lstress">Stress</string>
    <string name="lcholestrol">Cholestrol</string>
    <string name="random_sugar">Random Sugar</string>
    <string name="pressure">Pressure</string>
    <string name="select">Select</string>
    <string name="prescription">Prescription</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="save">Save</string>
    <string name="pres">Add Prescription</string>
    <string name="info">Information</string>
    <string name="get_pdf">Get PDF</string>
    <string name="add_prescription">Add Prescription</string>

    <string name="first">I feel irritated or angry if the car or traffic in front seems to be going too slowly
/ I become very frustrated at having to wait in a queue
</string>

    <string name="second">I experience mood swings, difficulty making decisions, concentration and memory is impaired</string>

    <string name="third">Increase in muscular aches and pains especially in the neck, head, lower back, shoulders</string>

    <string name="fourth">My appetite has changed, have either a desire to binge or have a loss of appetite / may skip meals</string>

    <string name="fifth">My self confidence / self esteem is lower than I would like it to be</string>

    <string name="sixth">I feel demotivated when I start any new work/ not feeling good to start with/ Don’t want to do any new work</string>

    <string name="seventh">I am not feeling happy in any circumstances</string>

    <string name="eighth">Always feeling sleepy/ Cant sleep / sleeping disorder</string>

    <string name="nineth">Cant make quick decisions</string>

    <string name="tenth">Randomness in BP / pulse palpitations</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="questionaries">Questionaries</string>
    <string name="vah">VAH</string>
    <string name="ci">CI</string>
    <string name="cvd">CVD</string>
    <string name="profile">Profile</string>
    <string name="enter_primary_number">Enter primary number</string>
    <string name="enter_secondary_number">Enter secondary number</string>

</resources>
