<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".ReportDetailsActivity">

    <LinearLayout
        android:id="@+id/lnrPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/pressure"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblPressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"

            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrSugarRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/random_sugar"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblRandomSugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"

            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrCholestrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/cholestrol"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblCholestrol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"

            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrStress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/stress"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblStress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"

            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrECG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/lecg"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblECG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"

            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/lbmi"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblBMI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"

            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrHemogram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="7dp"
        android:visibility="gone"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:text="@string/lhemogram"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/lblHemogram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddPres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/add_prescription"
        android:visibility="gone" />


</LinearLayout>