<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPrimaryNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPrimaryNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="10"
            android:text="@string/enter_primary_number" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSecondaryNumber0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPrimaryNumber">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtSecondaryNumber0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="10"
            android:text="@string/enter_secondary_number" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSecondaryNumber00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSecondaryNumber0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtSecondaryNumber00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="10"
            android:text="@string/enter_secondary_number" />


    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilSecondaryNumber00" />


</android.support.constraint.ConstraintLayout>